--- a/lepiter/gtoolkit/lepiter.properties
+++ b/lepiter/gtoolkit/lepiter.properties
@@ -1,4 +1,5 @@
 {
 	"uuid" : "21b94943-8084-0d00-b95d-f75a0f742dd9",
-	"schema" : "4.1"
+	"schema" : "4.1",
+	"databaseName" : "Pharo-Enhancements/lepiter/gtoolkit"
 }
