Lepiter - DB Name

--- a/lepiter/gtoolkit/lepiter.properties
+++ b/lepiter/gtoolkit/lepiter.properties
@@ -1,5 +1,5 @@
 {
+	"databaseName" : "GToolkit (via PharoEnhancements)",
 	"uuid" : "21b94943-8084-0d00-b95d-f75a0f742dd9",
-	"schema" : "4.1",
-	"databaseName" : "Pharo-Enhancements/lepiter/gtoolkit"
+	"schema" : "4.1"
 }
