--- a/.github/workflows/runTests.yaml
+++ b/.github/workflows/runTests.yaml
@@ -34,7 +34,7 @@ jobs:
       
       - uses: hpi-swa/setup-smalltalkCI@v1
         with:
-          smalltalk-version: ${{ matrix.smalltalk }}
+          smalltalk-image: ${{ matrix.smalltalk }}
       - name: Load Image and Run Tests
         run: smalltalkci -s ${{ matrix.smalltalk }}
         env:
