--- a/.github/workflows/runTests.yaml
+++ b/.github/workflows/runTests.yaml
@@ -24,7 +24,7 @@ jobs:
     
     strategy:
       matrix:
-        smalltalk: [ Pharo64-10, GToolkit64-release ]
+        smalltalk: [ GToolkit64-release, Pharo64-10 ]
     name: ${{ matrix.smalltalk }}
     
     # Steps represent a sequence of tasks that will be executed as part of the job
