[CI]: Reasonable Version 1 - Allow SSH Key via ssh-agent   - Pass CI SSH Key Secret   - Only Add SSH Key if Present - Guard GT & Pharo Specific Commands - Prevent errors in output - Release GT VM & (On Linux) Libs - Only Mac ARM - Runner Matrix & GH Token Only for stCI - Reusable workflow inputs - required and default are incompatible

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,9 @@ on:
 
 # Adapted from https://docs.github.com/en/actions/using-workflows/reusing-workflows
 jobs:
-  call-workflow-passing-data:
+  test-and-release:
     uses: seandenigris/Pharo-Enhancements/.github/workflows/ci_reusable.yaml@master
     with:
       project-name: PharoEnhancements
+      #runners: "[ 'ubuntu-latest' 'macos-14' ]"
+      #smalltalks: "[ 'GToolkit64-release' ]"
