[CI]: Fix Typo...
... in commented-out runners list

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,5 +17,5 @@ jobs:
     uses: seandenigris/Pharo-Enhancements/.github/workflows/ci_reusable.yaml@master
     with:
       project-name: PharoEnhancements
-      #runners: "[ 'ubuntu-latest' 'macos-14' ]"
+      #runners: "[ 'ubuntu-latest', 'macos-14' ]"
       #smalltalks: "[ 'GToolkit64-release' ]"
