[Doc]: JS Setup Lepiter Page

--- a/lepiter/gtoolkit/lepiter.properties
+++ b/lepiter/gtoolkit/lepiter.properties
@@ -1,5 +1,8 @@
 {
-	"databaseName" : "GToolkit (via PharoEnhancements)",
 	"uuid" : "21b94943-8084-0d00-b95d-f75a0f742dd9",
-	"schema" : "4.1"
+	"jsLink" : {
+		"nodejsPath" : "{home}/.local/state/fnm_multishells/53846_1728694341895/bin/node"
+	},
+	"schema" : "4.1",
+	"databaseName" : "GToolkit (via PharoEnhancements)"
 }
