[Doc]: Pharo Book Lepiter Clean Up
- Add TOC
- Clean/Update Todo and Dynabook pages

--- a/lepiter/pharo/lepiter.properties
+++ b/lepiter/pharo/lepiter.properties
@@ -1,5 +1,6 @@
 {
-	"databaseName" : "Pharo (via PharoEnhancements)",
 	"uuid" : "d34bf8fb-7c84-0d00-9b0e-f3890c3334de",
-	"schema" : "4.1"
+	"tableOfContents" : "2w50l4el4mu4khzgzmd4c3a6h",
+	"schema" : "4.1",
+	"databaseName" : "Pharo (via PharoEnhancements)"
 }
